--- a/style.css
+++ b/style.css
@@ -10,16 +10,66 @@ body {
     /* background-color: rgb(250, 248, 248) */
 }
 
-.wrapper {
+/* .wrapper {
+    margin: 30px;
+} */
+
+.sidenav {
+    margin: 0;
+    width: 200px;
+    height: 100%;
+    /* background-color: #fff; */
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    overflow: auto;
+}
+
+.sidenav > * {
     margin: 30px;
 }
 
+.sidenav > h1 {
+    font-size: 2rem;
+    overflow-y: hidden;
+}
+
+ul > li {
+    padding-top: 8px;
+    padding-bottom: 32px;
+    color: #757575;
+}
+
+ul {
+    overflow-y: hidden;
+}
+
+#list1 {
+ text-decoration: line-through red 2px;
+}
+
+.cart {
+    border: none;
+    padding: 10px 32px;
+    border-radius: 50px;
+    color: #fff;
+    background-color: red;
+    opacity: 0.80;
+    overflow-y: hidden;
+}
 .header {
+    margin: 25px;
+    /* width: 100%; */
     margin-bottom: 32px ;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+/* .header > .bar {
+    margin-left: -75px;
+} */
 
 #b1 {
     margin-top: 5px;
@@ -42,60 +92,72 @@ body {
 
 .header > img {
     width: 35px;
+    /* margin-right: -30px; */
+}
+
+#head1, #head2 {
+    margin: 25px;
 }
 
 .image {
+    margin: 25px;
     width: 100%;
     /* box-shadow: 2px 2px 20px 12px rgb(0, 0, 0, 0.1); */
     border: rgb(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
-.image1, .image2, .image3, .image4 {
+.image1, .image2, .image3, .image4, .image5 {
     margin-top: 32px;
     background: white;
-    width: 140px;
-    height: 200px;
+    width: 180px;
+    height: 220px;
     border-radius: 20px;
-    position: relative;
+    /* position: relative; */
     display: flex;
-    flex-direction:column-reverse ;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     box-shadow: 2px 2px 20px 12px rgb(0, 0, 0, 0.1);
    
 }
 
-.image1 > img, .image2 > img, .image3 > img, .image4 > img {
+.image1 > img, .image2 > img, .image3 > img, .image4 > img, .image5 > img {
     border-radius: 50%;
-    position: absolute;
+    /* position: absolute;
     top: 30px;
     left: 20px;
     bottom: 30px;
-    right: 20px;
+    right: 20px; */
 }
 
-.image1 > #name1, .image2 > #name2, .image3 > #name3, .image4 > #name4 {
-    position: absolute;
-    top: 160px;
+.image1 > #name1, .image2 > #name2, .image3 > #name3, .image4 > #name4, .image5 > #name5{
+    /* position: absolute; */
+    /* top: 160px; */
     font-weight: bold;
     font-family:Verdana, sans-serif;
     font-size: small;
 }
 
-.image {
+/* .image {
     display: grid;
     grid-template-areas: 
     'image1 image2'
     'image3 image4';
-    grid-template-columns: auto auto; 
-    grid-column-gap: 20px;
-}
+    grid-template-columns: 50% 50%; 
+    /* grid-column-gap: 31px; */
+/* }
 
 .image1, .image2, .image3, .image4 {
     grid-area: image1 image2 image3 image4;
-}
+} */ 
 
 
 #para1 {
+    margin: 25px;
     margin-top: 32px;
     font-family:Verdana, sans-serif;
     color: #757575;
@@ -103,7 +165,74 @@ body {
 }
 
 .bottom {
+    margin: 25px;
     width: 100px;
     margin-top: 16px;
     border: 2px solid red;
+}
+
+@media screen and (max-width:380) {
+    .image1, .image2, .image3, .image4 {
+        width: 140px;
+        height: 200px;
+    }
+    .image {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+}
+
+@media screen and (max-width:600px){
+    .sidenav {
+        display: none;
+    }
+    .image > .image5 {
+        display: none;
+    }
+    .lap {
+        display: none;
+    }
+    
+}
+
+@media screen and (min-width:600px) {
+    .header {
+        display: none;
+    }
+    .wrap {
+        margin-left:200px ;
+    }
+    .footer1, #head1 {
+        display: none;
+    }
+    /* .lap {
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    } */
+
+    .lap {
+        display: grid;
+        grid-template-areas:  
+        'head2 footer ';
+        grid-template-columns: 70% 30%;
+        padding-top: 64px;
+    }
+    #head2 {
+        font-size: 5.5rem;
+        width: 100%;
+    }
+    .lap > .footer {
+        padding-right: 50px; 
+    }
+    .image {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .image > * {
+        margin-left: 16px;
+    }
 }
