--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ ul {
 }
 .header {
     margin: 25px;
-    /* width: 100%; */
+    width: 89%;
     margin-bottom: 32px ;
     display: flex;
     justify-content: space-between;
@@ -101,7 +101,7 @@ ul {
 
 .image {
     margin: 25px;
-    width: 90%;
+    width: 89%;
     /* box-shadow: 2px 2px 20px 12px rgb(0, 0, 0, 0.1); */
     border: rgb(0, 0, 0, 0.1);
     display: flex;
@@ -226,7 +226,12 @@ ul {
     .lap > .footer {
         padding-right: 50px; 
     }
+    .image1, .image2,.image3,.image4,.image5 {
+        width: 180px;
+        height: 220px;
+    }
     .image {
+        width: 100%;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
